# Test_Beout_OS

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Makefile  README.md  beout_os-core.deb  build.sh
.github/workflows/: build.yml
activation/: CMakeLists.txt  README.md  activation_manager.cpp  activation_manager.hpp  machine_id.cpp  machine_id.hpp
api/: CMakeLists.txt  README.md  api_server.cpp  api_server.hpp  main.cpp  server.cpp
appliance-cli/: CMakeLists.txt  README.md
boot/: README.md
cli/: CMakeLists.txt  main.cpp
cmake/: README.md
common/: CMakeLists.txt  README.md
config/: global.conf  versions.conf
config-engine/: CMakeLists.txt  README.md
crypto/: CMakeLists.txt  README.md  crypto_utils.cpp  crypto_utils.hpp
dashboard/: CMakeLists.txt  README.md  app.tsx  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
database/: CMakeLists.txt  README.md  database_manager.cpp  database_manager.hpp
docs/: CODING_STANDARDS.md  README.md  architecture.md  build-guide.md  openapi.yaml  security-model.md
hardening/: README.md  harden.sh
include/: README.md
installer/: README.md  beout_installer.sh  bootloader.sh  config_partition.sh  install.sh  overlay.sh  partition.sh  squashfs.sh
installer/auto/: config
installer/config/hooks/binary/: 01-force-autoinstall.hook.sh
installer/config/includes.binary/install/: preseed.cfg
installer/config/package-lists/: core.list  runtime.list
licensing/: CMakeLists.txt  README.md  server.py
live-build/auto/: build  clean  config
live-build/config-hooks/live/: 00-horus-setup.hook.chroot
live-build/config-includes.chroot/etc/horus/: horus.conf
live-build/config-package-lists/: horus-minimal.list.chroot
logging/: CMakeLists.txt  README.md
packaging/: README.md  build_deb.sh  sync_network.sh
packaging/debian/DEBIAN/: control  postinst  preinst
packaging/debian/lib/systemd/system/: beout_os-api.service  beout_os-provisioning.service
provisioning/: CMakeLists.txt  README.md  cli_engine.cpp  cli_engine.hpp  main.cpp
scripts/: README.md  create-iso.sh  create-squashfs.sh  factory-reset.sh  sign-update.sh
security/: README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/horus/: db.hpp  logger.hpp  types.hpp  util.hpp
src/common/src/: db.cpp  logger.cpp  util.cpp
src/core/activation/: CMakeLists.txt  activation.cpp  activation.hpp  crypto.cpp  crypto.hpp  license.cpp  license.hpp  main.cpp  network.cpp  network.hpp
src/core/cli/: CMakeLists.txt  cli.cpp  cli.hpp  command.cpp  command.hpp  main.cpp  parser.cpp  parser.hpp  session.cpp  session.hpp
src/core/configdb/: CMakeLists.txt  config_store.cpp  config_store.hpp  firewall_rule.cpp  firewall_rule.hpp  interface.cpp  interface.hpp  license_token.cpp  license_token.hpp  main.cpp
src/core/overlay/: CMakeLists.txt  main.cpp  overlay_manager.cpp  overlay_manager.hpp
src/core/provisioning/: CMakeLists.txt  interface_config.cpp  interface_config.hpp  main.cpp  menu.cpp  menu.hpp  provisioning.cpp  provisioning.hpp
src/core/update/: CMakeLists.txt  ab_partition.cpp  ab_partition.hpp  main.cpp  signature.cpp  signature.hpp  update_manager.cpp  update_manager.hpp
systemd/: README.md  horus-activation.service  horus-cli.service  horus-lockdown.service  horus-overlay.service  horus-provisioning.service  horus-update.service  horus-webui.service
tests/: CMakeLists.txt  README.md  activation_test.cpp  crypto_test.cpp  example_test.cpp  main_test.cpp  provisioning_test.cpp
tools/: README.md
